Fixed content overflow.
Changed the .project-post height from 600px to display: inline-block. This made the divs fit their content, which works better with the content container.

--- a/public/css/content_page.css
+++ b/public/css/content_page.css
@@ -26,7 +26,8 @@ a:hover {
 
 html,
 body {
-  height: 100%;
+  min-height: : 100%;
+  height: auto;
   background-color: #77c9d4;
   background-repeat: no-repeat;
   background-size: cover;
@@ -41,9 +42,7 @@ body {
 
 /* Extra markup and styles for table-esque vertical and horizontal centering */
 .site-wrapper {
-  width: 100%;
-  height: 100%; /* For at least Firefox */
-  min-height: 100%;
+  width: 100%;/* For at least Firefox */
   -webkit-box-shadow: inset 0 0 100px rgba(0,0,0,.5);
           box-shadow: inset 0 0 100px rgba(0,0,0,.5);
 }
@@ -107,7 +106,7 @@ body {
 
 .project-post
 {
-  height: 600px;
+  display: inline-block;
 }
 
 
@@ -126,7 +125,7 @@ body {
  */
 
 .leftnav{
-  width: 20%;
+  width: 10%;
   display: inline-block;
   text-align: left;
   float: left;
